(Bug 5073) Tweak alignment for nav search
* aligns the search form elements with one another
* aligns the search form to match the rest of the top bar

--- a/htdocs/scss/schemes/tropo/_tropo-base.scss
+++ b/htdocs/scss/schemes/tropo/_tropo-base.scss
@@ -99,6 +99,15 @@ $header-height: 7em;
     }
 }
 
+
+.nav-search {
+    line-height: $topbar-height;
+    input, select {
+        line-height: $base-line-height;
+        top: 0;
+    }
+}
+
 /**
  * Footer
  */
